# markland

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  SECURITY.md  fly.toml  litestream.yml  pyproject.toml
.beads/: issues.jsonl
.github/workflows/: deploy.yml  test.yml
docs/: ARCHITECTURE.md  FOLLOW-UPS.md  ROADMAP.md  marketing-angles.md  tagline-candidates.md
docs/execution/: gap-analysis.md  log.md  status.md
scripts/: backfill_owners.py  create_service_agent.py  hosted_smoke.sh  mcp-config-snippet.json  smoke_test.py  start.sh
src/markland/: db.py  (+8 more)
tests/: _mcp_harness.py  conftest.py  test_404_page.py  test_admin_audit.py  test_admin_defense_in_depth.py  test_admin_metrics_http.py  test_admin_metrics_mcp.py  test_admin_metrics_service.py  test_admin_waitlist.py  test_agent_grant_email.py  test_agents_service.py  test_agents_smoke.py  test_alternative_seo_copy.py  test_api_grants.py  test_audit_deprecations.py  test_audit_docstrings.py  test_audit_error_model.py  test_audit_granularity.py  test_audit_idempotency.py  test_audit_integration.py  test_audit_missing.py  test_audit_naming.py  test_audit_pagination.py  test_audit_return_envelopes.py  test_audit_service.py  test_auth_agent_tokens.py  test_auth_routes.py  test_blog.py  test_blog_feed.py  test_blog_sitemap_llms.py  test_config.py  test_conflict_e2e.py  test_csp_template_coverage.py  test_dashboard_bookmarks.py  test_dashboard_shared.py  test_db.py  test_db_bookmarks_and_forks.py  test_db_schema.py  test_db_users_tokens.py  test_device_flow_codes.py  (+95 more)
(+218 files in other folders)
